--- a/client/src/css/_cameraProductCard.scss
+++ b/client/src/css/_cameraProductCard.scss
@@ -130,9 +130,7 @@ h3 {
 			drop-shadow(1px 20px 10px rgba(0, 0, 0, 0.3));
 		padding: 15px;
 	}
-	.currentCameraCardImageIsOpen {
-		transform: translate3d(-100px, -20px, 0px) scale(1.2);
-	}
+
 }
 
 .photo-album {
